--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:background="#000"
     android:layout_height="match_parent">
+  <ImageView
+      android:id="@+id/background"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:scaleType="center"
+      android:src="@drawable/yl"/>
   <ImageView
       android:id="@+id/image"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_centerHorizontal="true"
       android:layout_centerVertical="true"
-      android:layout_margin="130dp"
+      android:layout_margin="80dp"
       android:scaleType="centerInside"
-      android:src="@drawable/drawabl"/>
+      android:src="@drawable/arrow"/>
+
 </RelativeLayout>
