--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="#000"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#000">
   <ImageView
       android:id="@+id/background"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:scaleType="center"
+      android:scaleType="centerInside"
       android:src="@drawable/yl"/>
   <ImageView
       android:id="@+id/image"
